# oxygen

./: .gitignore  build.gradle.kts  codemagic.yaml  gradlew  replit.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/oxygens/app/: MainActivity.kt  OxygenApplication.kt
app/src/main/kotlin/com/oxygens/app/stub/: StubActivity.kt  StubProvider.kt  StubReceiver.kt  StubService.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
attached_assets/: oxygen-s-technical-plan_1783512537674.md
clone-registry-db/: build.gradle.kts
clone-registry-db/src/main/kotlin/com/oxygens/registry/: CloneDao.kt  CloneDatabase.kt  CloneEntity.kt
compat/: build.gradle.kts
compat/src/main/kotlin/com/oxygens/compat/: SystemServiceCompat.kt
compat/src/main/kotlin/com/oxygens/compat/api28/: Api28Compat.kt
compat/src/main/kotlin/com/oxygens/compat/api31/: Api31Compat.kt
compat/src/main/kotlin/com/oxygens/compat/api34/: Api34Compat.kt
compat/src/main/kotlin/com/oxygens/compat/api35/: Api35Compat.kt
core-loader/: build.gradle.kts
core-loader/src/main/kotlin/com/oxygens/core/loader/: AxmlParser.kt  GuestApkParser.kt  GuestClassLoaderFactory.kt  (+1 more)
core-storage/: build.gradle.kts
core-virtual/: build.gradle.kts
native-hook/: build.gradle.kts
native-hook/src/main/cpp/: CMakeLists.txt  hook_bridge.cpp  inline_hook_engine.cpp  inline_hook_engine.h
native-hook/src/main/kotlin/com/oxygens/nativehook/: NativeHookBridge.kt
(+15 files in other folders)
